# Kan

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/kan/test_runner_ecosystem/: CMakeLists.txt  test_runner.c
executable/application_framework_example/: CMakeLists.txt
executable/application_framework_example/configuration/: core.rd  program_test.rd
executable/application_framework_example/unit/application_framework_example_logic/: CMakeLists.txt  application_framework_example_logic.c
executable/application_framework_example/unit/application_framework_example_resources/: CMakeLists.txt
executable/application_framework_example/world/: core_root.rd
executable/application_framework_example/world/test/: program_root.rd
executable/application_framework_example_basic/: CMakeLists.txt
executable/application_framework_example_basic/configuration/: default_platform_configuration.rd  program_test.rd
executable/application_framework_example_basic/unit/application_framework_example_basic_logic/: application_framework_example_basic_logic.c
executable/application_framework_example_basic/unit/logic/: CMakeLists.txt  application_framework_example_basic_logic.c  logic.c
executable/application_framework_example_basic/unit/resources/: CMakeLists.txt
executable/application_framework_example_basic/world/: core_root.rd
executable/application_framework_example_import/: CMakeLists.txt
executable/application_framework_example_import/configuration/: default_platform_configuration.rd
executable/application_framework_example_import/unit/icon/: CMakeLists.txt
executable/application_framework_example_import/unit/icon_import/: CMakeLists.txt  icon_import.c
executable/application_framework_example_import/unit/logic/: CMakeLists.txt  logic.c
executable/application_framework_example_import/unit/resources/: CMakeLists.txt
executable/application_framework_example_import/world/: core_root.rd
executable/application_framework_examples/: CMakeLists.txt
executable/application_framework_examples/configuration/: core.rd  default_platform_configuration.rd  example_basic.rd  example_compilation_basic.rd  example_compilation_byproduct.rd  example_compilation_state.rd  example_deferred_render.rd  example_import.rd  example_test_render_graph.rd  example_test_render_material.rd  example_test_render_texture.rd  example_text_effects.rd
executable/application_framework_examples/resource_platform_configuration/: default_platform_configuration.rd  default_render_code.rd  default_texture.rd  platform_configuration_setup.rd
executable/application_framework_examples/unit/basic/: CMakeLists.txt  example.c
executable/application_framework_examples/unit/compilation_basic/: CMakeLists.txt  example.c
executable/application_framework_examples/unit/compilation_byproduct/: CMakeLists.txt  example.c
executable/application_framework_examples/unit/compilation_state/: CMakeLists.txt  example.c
executable/application_framework_examples/unit/deferred_render/: CMakeLists.txt  example.c  readme.md
executable/application_framework_examples/unit/icon_import/: CMakeLists.txt  icon_import.c
executable/application_framework_examples/unit/icon_resource/: CMakeLists.txt
executable/application_framework_examples/unit/import/: CMakeLists.txt  example.c
executable/application_framework_examples/unit/platform_configuration/: CMakeLists.txt
executable/application_framework_examples/unit/resource_test_expectation/: CMakeLists.txt
executable/application_framework_examples/unit/resource_test_expectation_build/: CMakeLists.txt
executable/application_framework_examples/unit/test_render_graph/: CMakeLists.txt  example.c
executable/application_framework_examples/unit/test_render_material/: CMakeLists.txt  example.c
executable/application_framework_examples/unit/test_render_texture/: CMakeLists.txt  example.c
executable/application_framework_examples/unit/text_effects/: CMakeLists.txt  example.c
executable/application_framework_examples/world/: core_root.rd
executable/application_framework_examples/world/example/: basic.rd  compilation_basic.rd  compilation_byproduct.rd  compilation_state.rd  deferred_render.rd  import.rd  test_render_graph.rd  test_render_material.rd  test_render_texture.rd  text_effects.rd
executable/application_framework_resource_builder/: CMakeLists.txt
executable/application_framework_resource_builder/unit/application_framework_resource_builder/: CMakeLists.txt
executable/c_interface_scanner/: CMakeLists.txt
executable/c_interface_scanner/unit/c_interface_scanner/: CMakeLists.txt  c_interface_scanner.c
executable/reflection_generator/: CMakeLists.txt
executable/reflection_generator/unit/reflection_generator/: CMakeLists.txt  reflection_generator.c
executable/reflection_preprocessor/: CMakeLists.txt
executable/reflection_preprocessor/unit/reflection_preprocessor/: CMakeLists.txt  reflection_preprocessor.c
executable/universe_preprocessor/: CMakeLists.txt
executable/universe_preprocessor/unit/universe_preprocessor/: CMakeLists.txt  universe_preprocessor.c
unit/application_framework/: CMakeLists.txt
unit/application_framework/kan/application_framework/: application_framework.c  application_framework.h
unit/application_framework/kan/context/: application_framework_system.c  application_framework_system.h
unit/context_hot_reload_coordination_system/: CMakeLists.txt
unit/context_hot_reload_coordination_system/kan/context/: hot_reload_coordination_system.h
unit/context_render_backend_system_vulkan/: CMakeLists.txt
unit/context_render_backend_system_vulkan/kan/context/: buffer.c  cached_sampler.c  pass.c  (+19 more)
unit/cpu_profiler/: CMakeLists.txt
unit/error/: CMakeLists.txt
unit/image_stb/: CMakeLists.txt
unit/memory_profiler/: CMakeLists.txt
unit/reflection_kan/: CMakeLists.txt
unit/render_backend_vulkan/: CMakeLists.txt
unit/repository_kan/: CMakeLists.txt
unit/text_ft_hb/: CMakeLists.txt
unit/universe_render_foundation/: CMakeLists.txt
unit/workflow_kan/: CMakeLists.txt
(+623 files in other folders)
